# drr_utils_cpp

./: .gitignore  CMakeLists.txt  README.md  main_drr_detection_dataset.cpp
config/: detection_config.yaml
data/verse2020_test_detection_dataset/: detection_data.json
include/dataset_tools/: dataset_sample.h
include/detection/: GenDetectionDataset.h  coco_detection_data.h
include/drr/: ITKGenDrr.h
include/io/: common.h  debug_print.h  file_process.h  image_process.h  local_format.h
src/dataset_tools/: coco_detection_data.cpp  dataset_sample.cpp
src/detection/: GenDetectionDataset.cpp  coco_detection_data.cpp
src/drr/: ITKGenDrr.cpp
src/io/: common.cpp  debug_print.cpp  file_process.cpp  image_process.cpp
